--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2410,7 +2410,7 @@ a#moveDown {
   vertical-align: middle;
 }
 #hero_video .wrapper h3 {
-  color: #fff;
+  color: #fff !important;
   font-size: 42px;
   font-size: 2.625rem;
   text-transform: uppercase;
