create animate loading when load data. Fetch tour by category,update profileUser

--- a/src/common/TourHot.css
+++ b/src/common/TourHot.css
@@ -2,3 +2,6 @@
     background-repeat:no-repeat !important;
     background-size: cover !important;
 }
+.bg-black{
+    background-color: black !important;
+}
