--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1185,7 +1185,7 @@ header.sticky .hamburger-inner, header.sticky .hamburger-inner::before, header.s
   height: 100%;
 }
 .hero_in .wrapper h1 {
-  color: #fff !important;
+  color:white !important;
   font-size: 42px;
   font-size: 2.625rem;
   text-transform: uppercase;
